RESOLVED FIXED Bug 231682
REGRESSION (r283667): webgl/2.0.0/deqp/functional/gles3/lifetime.html fails
https://bugs.webkit.org/show_bug.cgi?id=231682
Summary REGRESSION (r283667): webgl/2.0.0/deqp/functional/gles3/lifetime.html fails
Jon Lee
Reported 2021-10-13 10:18:49 PDT
WebGL bot shows webgl/2.0.0/deqp/functional/gles3/lifetime.html fails after r283667.
Attachments
Patch (2.00 KB, patch)
2021-10-13 13:25 PDT, Kyle Piddington
no flags
Patch for landing (2.04 KB, patch)
2021-10-15 15:42 PDT, Kyle Piddington
no flags
Radar WebKit Bug Importer
Comment 1 2021-10-13 10:21:30 PDT
Kenneth Russell
Comment 2 2021-10-13 10:30:30 PDT
Kyle, could you investigate this regression? If shaders are failing to compile then arbitrary WebGL applications might be impacted.
Kyle Piddington
Comment 3 2021-10-13 13:25:17 PDT
EWS Watchlist
Comment 4 2021-10-13 13:26:26 PDT
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Kimmo Kinnunen
Comment 5 2021-10-14 10:51:54 PDT
Comment on attachment 441126 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=441126&action=review some whitespace issues.. > Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_glslang_mtl_utils.mm:261 > + << "ANGLE_vertexOut."; whitespace: maybe match the indent or align the whole statement. > Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/mtl_glslang_mtl_utils.mm:262 > + if(!varying.isBuiltIn()) nit: space after if
Kyle Piddington
Comment 6 2021-10-15 15:42:44 PDT
Created attachment 441442 [details] Patch for landing
EWS
Comment 7 2021-10-15 16:57:19 PDT
Committed r284293 (243091@main): <https://commits.webkit.org/243091@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441442 [details].
Note You need to log in before you can comment on or make changes to this bug.