Cherry-pick r284293. rdar://problem/84204653

REGRESSION (r283667): webgl/2.0.0/deqp/functional/gles3/lifetime.html fails
    https://bugs.webkit.org/show_bug.cgi?id=231682

    Transform feedback should avoid appending _u for
    builtin output variables.

    Reviewed by Kimmo Kinnunen.

    * src/libANGLE/renderer/metal/mtl_glslang_mtl_utils.mm:
    (rx::mtl::GenerateTransformFeedbackVaryingOutput):

    Canonical link: https://commits.webkit.org/243091@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284293 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.310@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@284949 268f45cc-cd09-0410-ab3c-d52691b4dbfc